# rote

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: design.md
examples/data/: deep.tsv  large.tsv  small.tsv  tall.tsv  wide.tsv
examples/demo-form/: index.html  submitted.html
src/: cdp.rs  cli.rs  data.rs  main.rs  playback.rs  training.rs  tui.rs  workflow.rs
src/cdp/: discover.rs  launch.rs  protocol.rs  transport.rs
src/data/: parse.rs  source.rs
src/playback/: engine.rs  execute.rs  resolve.rs
src/training/: core.rs  recorder.rs
src/tui/: connect.rs  data.rs  playback.rs  table.rs  training.rs
