[package]
name = "rote"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
arboard = "3.4.1"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
