[package]
name = "rote"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Record once, replay forever. Automate repetitive web data entry by demonstrating the task once."
repository = "https://github.com/isentropic-dev/rote"

[lints.rust]
unused = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[dependencies]
arboard = "3.4.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
csv = "1.3"
futures-util = "0.3"
ratatui = "0.29"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
ureq = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
